helm/contador-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contador-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /contador
        backend:
          serviceName: contador-cl
          servicePort: 5000
